--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,11 @@ plugins {
 	id 'org.springframework.boot' version '2.4.4'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id 'jacoco'
 }
 
 group = 'com.builders.customer'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.0'
 sourceCompatibility = '11'
 
 configurations {
@@ -15,18 +16,65 @@ configurations {
 }
 
 repositories {
+	mavenLocal()
 	mavenCentral()
 }
 
 dependencies {
+	// SpringBoot Starter
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	// Lombok Annotations
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+
+	// Open API 3.0
+	compile 'org.springdoc:springdoc-openapi-ui:1.5.6'
+	//compile 'org.springdoc:springdoc-openapi-security:1.5.6'
+	compile 'org.springdoc:springdoc-openapi-webmvc-core:1.5.6'
+}
+
+jacoco {
+	toolVersion = "0.8.6"
+}
+
+jacocoTestCoverageVerification {
+	violationRules {
+		rule {
+			element = 'CLASS'
+			excludes = [
+					'*Test',
+					'com.builders.customer.config.*'
+			]
+			limit {
+				counter = 'BRANCH'
+				value = 'COVEREDRATIO'
+				minimum = 0.8
+			}
+		}
+	}
+}
+
+jacocoTestReport {
+	reports {
+		xml.enabled true
+		csv.enabled false
+	}
+	dependsOn test
+	afterEvaluate {
+		classDirectories.setFrom(files(classDirectories.files.collect {
+			fileTree(dir: it, exclude: [
+				'**/config/**/*'
+			])
+		}))
+	}
+	finalizedBy jacocoTestCoverageVerification
 }
 
 test {
 	useJUnitPlatform()
+	finalizedBy jacocoTestReport
 }
