--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,19 @@
 
 ### Actuator ###
 management:
+  server:
+    port: 9090
   endpoints:
     web:
       exposure:
         include: "*"
+
+### SpringDocs & Swagger ###
+springdoc:
+  show-actuator: true
+#  api-docs:
+#    path: "/openapi"
+#    enabled: false
+#  swagger-ui:
+#    path: "/swaggerui"
+#    enabled: false
