--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,10 @@ dependencies {
 	compile 'org.springdoc:springdoc-openapi-ui:1.5.6'
 	//compile 'org.springdoc:springdoc-openapi-security:1.5.6'
 	compile 'org.springdoc:springdoc-openapi-webmvc-core:1.5.6'
+	//compile 'org.springdoc:springdoc-openapi-data-rest:1.5.6'
+
+	// DTO Mapper
+	compile 'org.modelmapper:modelmapper:2.4.0'
 }
 
 jacoco {
